--- a/ansible.cfg
+++ b/ansible.cfg
@@ -56,6 +56,7 @@ inventory       = /root/ansible/hosts
 
 # additional paths to search for roles in, colon separated
 #roles_path    = /etc/ansible/roles
+roles_path    = /root/ansible/roles
 
 # uncomment this to disable SSH key host checking
 #host_key_checking = False
